--- a/apps/sample/Cargo.toml
+++ b/apps/sample/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 mockito = "1.4"
+serde_json = "1"
 twapi-v2 = { version = "0.15", default-features = false, features = ["rustls-tls", "oauth10a"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
